--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,6 @@
 .app.dark {
   --bg-color: #24242b;
-  --inversed-bg-color: #e8e8ea;
+  --inversed-bg-color: #a6a6b6;
 
   --primery-color: #b37f0f;
   --secundary-color: #b6b6b6;
