add notFoundPage and Loader

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,6 +1,6 @@
 .app.light {
   --bg-color: #e8e8ea;
-  --inversed-bg-color: #24242b;
+  --inverted-bg-color: #24242b;
 
   --primery-color: #041c65;
   --secundary-color: #3e7bff;
