--- a/src/shared/ui/Loader/Loader.module.scss
+++ b/src/shared/ui/Loader/Loader.module.scss
@@ -1,8 +1,12 @@
-.AppError {
+.wrapperLoader {
     width: 100%;
     height: 100vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.Loader {
+    width: 120px;
+    height: 120px;
 }
